# visualization.projectm

./: CMakeLists.txt  FindOpenGLES3.cmake
depends/common/projectm/: 01-gles3.patch  CMakeLists.txt  projectm.sha256  projectm.txt
depends/linux/freetype/: CMakeLists.txt  freetype.sha256  freetype.txt
depends/linux/ftgl/: CMakeLists.txt  ftgl.sha256  ftgl.txt
src/: Main.cpp
